# heretic

./: pyproject.toml
Heretic-Training/: run_heretic.py
src/heretic/: config.py  main.py  model.py  utils.py
